--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "jszip": "^3.10.1",
     "preact": "^10.21.0",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat"
