--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^9.2.0",
     "globals": "^15.2.0",
     "prettier": "^3.2.5",
+    "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0"
   }
 }
