fix: module require error.

--- a/lib/net/fetch/avgasd/tsconfig.json
+++ b/lib/net/fetch/avgasd/tsconfig.json
@@ -2,11 +2,11 @@
 	"compilerOptions": {
 		"baseUrl": "./",
 		"target": "ESNext",
-		"module": "ESNext",
-		"moduleResolution": "bundler",
+		"module": "NodeNext",
 		"noEmit": true,
 		"allowJs": true,
 		"checkJs": true,
+		"allowImportingTsExtensions": true,
 		/* Preact Config */
 		"jsx": "react",
 		"jsxFactory": "h",
