--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"type": "module",
 	"devDependencies": {
 		"@eslint/js": "^9.2.0",
+		"esbuild": "^0.21.2",
 		"eslint": "^9.2.0",
 		"globals": "^15.2.0",
 		"prettier": "^3.2.5",
