--- a/lib/net/fetch/avgasd/tsconfig.json
+++ b/lib/net/fetch/avgasd/tsconfig.json
@@ -4,14 +4,14 @@
 		"target": "ESNext",
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
-		"noEmit": true,
+		// "noEmit": true,
 		"allowJs": true,
 		"checkJs": true,
 		/* Preact Config */
 		"jsx": "react",
 		"jsxFactory": "h",
 		"jsxFragmentFactory": "Fragment",
-		"skipLibCheck": true
+		"skipLibCheck": true,
 	},
 	"include": [
 		"**/*"
