--- a/lib/net/fetch/avgasd/package.json
+++ b/lib/net/fetch/avgasd/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@sutear-revuf/scripts-lib-net-fetch",
-  "type": "module",
-  "main": "mod.tsx",
-  "dependencies": {
-    "@preact/signals": "^1.2.3",
-    "htm": "^3.1.1",
-    "jszip": "^3.10.1",
-    "preact": "^10.21.0"
-  }
+	"name": "@sutear-revuf/scripts-lib-net-fetch",
+	"type": "module",
+	"main": "mod.ts",
+	"dependencies": {
+		"@preact/signals": "^1.2.3",
+		"htm": "^3.1.1",
+		"jszip": "^3.10.1",
+		"preact": "^10.21.0"
+	}
 }
