--- a/lib/net/fetch/avgasd/package.json
+++ b/lib/net/fetch/avgasd/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@sutear-revuf/scripts-lib-net-fetch",
 	"type": "module",
-	"main": "mod.ts",
+	"main": "index.js",
 	"dependencies": {
 		"@preact/signals": "^1.2.3",
 		"htm": "^3.1.1",
